@@ -9,6 +9,7 @@
   Fixed issue MR-342 - Incorrect view in config pane of new connection after viewing default inheritance
   Added detection of newer versions of connection files and database schemata. mRemoteNG will now refuse to open them to avoid data loss.
   Improved appearance and discoverability of the connection search box.
+  Fixed tabs not closing on double-click when the active tab is a PuTTY connection.
 
   Fixed issue MR-340 - Object reference not set to an instance of an object.
   Fixed issue MR-344 - Move "Always show panel tabs" option
